# larql

./: Makefile  README.md  ROADMAP.md
.github/workflows/: shannon-verify.yml
crates/kv-cache-benchmark/examples/: patch_propagation_q4k.rs  q4k_ffn_raw_bridge.rs
crates/larql-cli/: ROADMAP.md
crates/larql-cli/examples/: patch_down_proj.rs
crates/larql-compute/: README.md  ROADMAP.md
crates/larql-compute-metal/: coverage-policy.json
crates/larql-compute-metal/src/: async_compute_backend_impl.rs  kv_dispatch_impl.rs
crates/larql-compute-metal/src/backend/: mod.rs
crates/larql-compute-metal/src/buffers/: mod.rs
crates/larql-compute-metal/src/decode/: profile.rs
crates/larql-compute-metal/src/kernels/: mod.rs
crates/larql-compute/src/: lib.rs  per_layer_decode_state.rs  pipeline_layer.rs  state_handle.rs  test_fixtures.rs
crates/larql-inference/examples/: predict_from_residual.rs  probe_contribution_distribution.rs  probe_residual_stream.rs  profile_faithful_walk.rs  q4k_remote_parity.rs
crates/larql-inference/src/: test_utils.rs
crates/larql-inference/tests/: test_q4k_cached_parity.rs
crates/larql-kv/: PERFORMANCE.md  README.md
crates/larql-kv/benches/: engine_decode.rs
crates/larql-kv/docs/: state-policy.md
crates/larql-kv/examples/: contract_classify_cached_ffn.rs
crates/larql-kv/src/: lib.rs
crates/larql-lql/: Cargo.toml
crates/larql-lql/tests/: infer_trace_synthetic.rs
crates/larql-models/: ROADMAP.md  coverage-policy.json
crates/larql-models/tests/: test_loading.rs
crates/larql-router/: Cargo.toml  README.md  ROADMAP.md
crates/larql-router/benches/: routing.rs
crates/larql-router/examples/: static_shards_server.rs
crates/larql-router/src/: http.rs  main.rs
crates/larql-router/src/grid/: mod.rs  routing.rs  service.rs  testing.rs
crates/larql-router/src/tasks/: rtt_probe.rs
crates/larql-router/src/tasks/rebalancer/: eviction.rs  hot_shard.rs  imbalance.rs  mod.rs  replication.rs
crates/larql-router/tests/: test_admin_rpcs.rs  test_grid_service.rs  test_http_handlers.rs
crates/larql-server/: CHANGELOG.md  Cargo.toml  coverage-policy.json
crates/larql-server/src/: bootstrap.rs  state.rs
crates/larql-server/tests/: test_openai_completions_coverage.rs  test_openai_schema_mask_coverage.rs  test_openapi_coverage.rs  test_synthetic_generation_smoke.rs  test_synthetic_q4k_smoke.rs
crates/larql-vindex/: README.md  coverage-policy.json
crates/larql-vindex-spec/: README.md
crates/larql-vindex-spec/src/: lib.rs
crates/larql-vindex/examples/: bench_gate_dequant.rs
crates/larql-vindex/tests/: test_vindex.rs  test_vindex_to_q4k.rs
docs/: multi-modal.md
docs/diagnoses/: granite-4.1-tied-embed-packaging-bug.md  granite-4.1-tied-embed-packaging-issue.md
(+87 files in other folders)
